--- a/drivers/media/platform/mxc/capture/Kconfig
+++ b/drivers/media/platform/mxc/capture/Kconfig
@@ -41,6 +41,13 @@ config MXC_CAMERA_OV5640_V2
 	help
 	  If you plan to use the ov5640 Camera with your MXC system, say Y here.
 
+config MYIR_CAMERA_OV5640
+	tristate "OmniVision ov5640 camera support"
+	depends on VIDEO_MXC_CAPTURE && I2C
+	---help---
+	  If you plan to use the ov5640 Camera with your MYIR system, say Y here.
+
+
 config MXC_CAMERA_OV5642
 	tristate "OmniVision ov5642 camera support"
 	depends on !VIDEO_MXC_EMMA_CAMERA && I2C
