--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -191,6 +191,16 @@ config REGULATOR_BD718XX
 	  This driver can also be built as a module. If so, the module
 	  will be called bd718x7-regulator.
 
+config REGULATOR_BD71837
+	tristate "ROHM BD71837 Power Regulator"
+	depends on MFD_ROHM_BD71837
+	help
+	  This driver supports voltage regulators on ROHM BD71837 PMIC.
+	  This will enable support for the software controllable buck
+	  and LDO regulators.
+
+	  This driver can also be built as a module. If so, the module
+	  will be called bd71837-regulator.
 config REGULATOR_BD9571MWV
 	tristate "ROHM BD9571MWV Regulators"
 	depends on MFD_BD9571MWV
