--- a/arch/arm64/boot/dts/freescale/myb-fsl-imx8mq-evk.dts
+++ b/arch/arm64/boot/dts/freescale/myb-fsl-imx8mq-evk.dts
@@ -45,12 +45,14 @@
 
 	};
 
-	bt_rfkill {
-		compatible = "fsl,mxc_bt_rfkill";
-		bt-power-gpios = <&gpio3 15 GPIO_ACTIVE_LOW>;
-		status ="okay";
-	};
 
+	modem_reset: modem-reset {
+		compatible = "gpio-reset";
+		reset-gpios = <&gpio3 15 GPIO_ACTIVE_LOW>;
+		reset-delay-us = <2000>;
+		reset-post-delay-ms = <40>;
+		#reset-cells = <0>;
+	};
 
 
 	regulator-virtuals {
@@ -894,6 +896,7 @@
 	assigned-clocks = <&clk IMX8MQ_CLK_UART3>;
 	assigned-clock-parents = <&clk IMX8MQ_SYS1_PLL_80M>;
 	fsl,uart-has-rtscts;
+	resets = <&modem_reset>;
 	status = "okay";
 };
 
