--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -121,7 +121,10 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MQ) += fsl-imx8mq-ddr3l-arm2.dtb \
 				 fsl-imx8mq-evk-edp.dtb \
 				 myb-fsl-imx8mq-evk.dtb \
 				 myb-fsl-imx8mq-evk-dcss-tc358775-10.dtb \
-				 myb-fsl-imx8mq-evk-lcdif-tc358775-10.dtb
+				 myb-fsl-imx8mq-evk-lcdif-tc358775-10.dtb \
+				 myb-fsl-imx8mq-evk-dual-tc358775-10.dtb \
+				 myb-fsl-imx8mq-evk-lcdif-tc358775-7.dtb \
+				 myb-fsl-imx8mq-evk-dual-tc358775-7.dtb 
 dtb-$(CONFIG_ARCH_FSL_IMX8MM) += fsl-imx8mm-evk.dtb \
 				 fsl-imx8mm-evk-drm.dtb \
 				 fsl-imx8mm-evk-ak4497.dtb \
