--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -128,7 +128,8 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MQ) += fsl-imx8mq-ddr3l-arm2.dtb \
 				 myb-fsl-imx8mq-evk-lcdif-tc358775-19.dtb \
 				 myb-fsl-imx8mq-evk-dual-tc358775-19.dtb \
 				 myb-fsl-imx8mq-evk-lcdif-lt8912.dtb \
-				 myb-fsl-imx8mq-evk-dual-lt8912.dtb
+				 myb-fsl-imx8mq-evk-dual-lt8912.dtb \
+				 myb-fsl-imx8mq-evk-lcdif-lt070me05000.dtb
 dtb-$(CONFIG_ARCH_FSL_IMX8MM) += fsl-imx8mm-evk.dtb \
 				 fsl-imx8mm-evk-drm.dtb \
 				 fsl-imx8mm-evk-ak4497.dtb \
